# AWS_CLI_Connect_tools

./: .gitignore  CLAUDE.md  README.md  README_mac.md  ec2menu_mac_migration_summary.md  ec2menu_v5.2.0_mac.py  ec2menu_v5.3.0_mac.py  ec2menu_v5.5.0_mac.py  pyproject.toml  work_history_v5.2.0_mac.md
archive/: ec2menu_v5.3.0_mac.py  ec2menu_v5.4.0_mac.py  ec2menu_v5.5.0_mac.py.bak
docs/work_history/: 2026-01-07.md  2026-01-09.md  2026-04-17.md  2026-04-20.md
ec2menu/: __init__.py  __main__.py  main.py
ec2menu/aws/: batch.py  manager.py  transfer.py
ec2menu/core/: cache.py  colors.py  config.py  keychain.py  utils.py
ec2menu/menus/: cloudwatch.py  ec2.py  ecs.py  eks.py  elasticache.py  lambda_menu.py  rds.py  s3.py
ec2menu/terminal/: kubectl.py  session.py
ec2menu/ui/: credentials.py  history.py  menu.py
tests/: test_core.py  test_imports.py
